# rasp-pi-setup

./: Cargo.toml  config.toml  config.yap
src/: main.rs  tui.rs  warpspeed.rs
src/effects/: mod.rs
