[package]
name = "rasp-pi-setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_ws281x = "0.5.1"
sled = {git = "https://github.com/DavJCosby/sled/", default-features = false, features = ["drivers"]}
rand = {version = "0.8.5", default-features = false, features = ["std", "std_rng"]}
crossterm = "0.28"
ratatui = "0.28"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1